# Catalyst_agent

./: CO2RR.txt  NRR.txt  ORR.txt  README_MCP_SERVERS.md  nrr_materials.md  orr_materials.md
cif_file_resource_server/: README.md  get_space_group.ipynb  main.py  pyproject.toml
cif_file_resource_server/cifs/: LaTl3.cif
energy_evaluation_server/: README.md  functions.py  main.py  pyproject.toml
fairchem/src/fairchem/core/components/calculate/recipes/: adsorbml.py
fairchem/src/fairchem/data/oc/core/: slab.py
perplexity_deep_research/: main.py  pyproject.toml
structure_modification_server/: README.md  functions.py  main.py  pyproject.toml  slab_LaTl3_001.pkl
structure_retrieval_server/: README.md  functions.py  main.py  pyproject.toml
