[project]
name = "structure-modification-server"
version = "0.1.0"
description = "MCP server: build fairchem slab from CIF or results.json, apply doping/strain, serialize slab to file"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.26.0",
    "fairchem-core==2.5.0",
    "mcp[cli]>=1.18.0",
    "numpy",
    "pymatgen>=2025.10.7",
    "setuptools<81",
]
